--- a/src/main/resources/html/dashboard.html
+++ b/src/main/resources/html/dashboard.html
@@ -85,106 +85,54 @@
 
     <!-- Gestione Caselli -->
     <div class="row g-3 mb-3">
-        <div class="col-12 col-lg-6">
-            <div class="card bg-white p-3">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                    <h6 class="mb-0">Caselli</h6>
-                    <div class="admin-tools" style="display:none;">
-                        <button class="btn btn-sm btn-success">Aggiungi casello</button>
-                    </div>
-                </div>
-                <div class="table-responsive">
-                    <table class="table table-hover align-middle mb-0">
-                        <thead class="small text-muted">
-                        <tr><th>Casello</th><th>Tratto</th><th>Stato</th><th>Interventi</th><th>Dispositivi</th><th>Azioni</th></tr>
-                        </thead>
-                        <tbody id="caselliTable"></tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-
-        <!-- Gestione Corsie -->
-        <div class="col-12 col-lg-6">
-            <div class="card bg-white p-3">
-                <div class="d-flex justify-content-between align-items-center mb-2">
-                    <h6 class="mb-0">Corsie</h6>
-                    <div class="admin-tools" style="display:none;">
-                        <button class="btn btn-sm btn-success">Aggiungi corsia</button>
-                    </div>
-                </div>
-                <div class="table-responsive">
-                    <table class="table table-borderless table-sm mb-0">
-                        <thead class="small text-muted">
-                        <tr><th>Corsia</th><th>Tratto</th><th>Stato</th><th>Note</th><th>Azioni</th></tr>
-                        </thead>
-                        <tbody id="corsieTable"></tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
+       <div class="col-12 col-lg-6">
+  <div class="card bg-white p-3">
+    <div class="d-flex justify-content-between align-items-center mb-2">
+      <h6 class="mb-0">Autostrada</h6>
     </div>
-
-    <!-- Dispositivi -->
-    <div class="row g-3 mb-3">
-        <div class="col-12 col-lg-6">
-            <div class="card bg-white p-3">
-                <h6 class="mb-0">Dispositivi</h6>
-                <div id="devicesList"></div>
-            </div>
-        </div>
-
-        <div class="col-12 col-lg-6">
-            <div class="card bg-white p-3">
-                <h6 class="mb-0">Storico veicoli</h6>
-                <input type="text" class="form-control form-control-sm mb-2" placeholder="Ricerca targa">
-                <div id="vehiclesList">Nessun transito recente</div>
-            </div>
-        </div>
+    <div class="table-responsive">
+      <table class="table table-sm mb-0">
+        <thead class="small text-muted">
+          <tr>
+            <th>Regione</th>
+            <th>Autostrada</th>
+            <th>Casello</th>
+          </tr>
+        </thead>
+        <tbody id="highwaysTable"></tbody>
+      </table>
     </div>
+  </div>
+</div>
 
-    <!-- Multe -->
-    <div class="row g-3 mb-3">
-        <div class="col-12 col-lg-8">
+    <div class="col-12 col-lg-6">
             <div class="card bg-white p-3">
                 <div class="d-flex justify-content-between align-items-center mb-2">
                     <h6 class="mb-0">Multe</h6>
-                    <div class="admin-tools" style="display:none;">
-                        <button class="btn btn-sm btn-success">Genera multa</button>
-                        <button class="btn btn-sm btn-primary">Check veicolo (Tutor)</button>
-                    </div>
                 </div>
                 <div class="table-responsive">
                     <table class="table table-sm mb-0">
                         <thead class="small text-muted">
-                        <tr><th>ID</th><th>Data</th><th>Casello/Corsia</th><th>Importo</th><th>Stato</th><th>Azioni</th></tr>
+                        <tr><th>ID</th><th>Targa</th><th>Data</th><th>Importo</th><th>Stato</th></tr>
                         </thead>
                         <tbody id="finesTable"></tbody>
                     </table>
                 </div>
             </div>
         </div>
-        <div class="col-12 col-lg-4">
-            <div class="card bg-white p-3">
-                <h6 class="mb-0">Pagamenti Telepass</h6>
-                <div id="paymentsList">Incassi disponibili: <span class="text-danger">€475</span></div>
-                <div class="admin-tools" style="display:none;">
-                    <button class="btn btn-sm btn-success mt-2">Incassa pagamenti</button>
-                </div>
-            </div>
-        </div>
+      
     </div>
 
-    <!-- Calcolo pedaggio -->
+    <!-- Calcolo pedaggio + km -->
     <div class="card bg-white p-3 mt-3">
         <h6>Calcola pedaggio</h6>
         <div class="row g-2 align-items-end mb-2">
             <div class="col-12 col-md-5">
-                <label class="form-label small">Origine (lat,lng)</label>
+                <label class="form-label small">Origine</label>
                 <input id="tollOrigin" class="form-control form-control-sm" placeholder="es. 45.4642,9.1900">
             </div>
             <div class="col-12 col-md-5">
-                <label class="form-label small">Destinazione (lat,lng)</label>
+                <label class="form-label small">Destinazione</label>
                 <input id="tollDestination" class="form-control form-control-sm" placeholder="es. 45.0703,7.6869">
             </div>
             <div class="col-12 col-md-2 d-grid">
@@ -424,6 +372,73 @@
         });
       })
       .catch(err => console.error("Errore fetch picchi orari:", err));
+
+      // Fetch regione–autostrada–casello e mostra in tabella (esempio)
+// Tabella Autostrada: Regione – Autostrada – Casello
+fetch('/api/tolls')
+  .then(res => {
+    if (!res.ok) throw new Error('Errore HTTP: ' + res.status);
+    return res.json();
+  })
+  .then(data => {
+    if (data.error) {
+      console.error("Errore API /api/tolls:", data.error);
+      return;
+    }
+
+    const tbody = document.getElementById('highwaysTable');
+    if (!tbody) return;
+
+    tbody.innerHTML = '';
+    data.forEach(row => {
+      const tr = document.createElement('tr');
+      tr.innerHTML = `
+        <td>${row.nome_regione}</td>
+        <td>${row.nome_autostrada}</td>
+        <td>${row.nome_casello}</td>
+      `;
+      tbody.appendChild(tr);
+    });
+  })
+  .catch(err => console.error("Errore fetch /api/tolls:", err));
+
+
+// Tabella Multe: ultimi 7 giorni
+fetch('/api/fines/list')
+  .then(res => {
+    if (!res.ok) throw new Error('Errore HTTP: ' + res.status);
+    return res.json();
+  })
+  .then(data => {
+    if (data.error) {
+      console.error("Errore API /api/fines/list:", data.error);
+      return;
+    }
+
+    const tbody = document.getElementById('finesTable');
+    if (!tbody) return;
+
+    tbody.innerHTML = '';
+    data.forEach(row => {
+      const tr = document.createElement('tr');
+
+      const statoLabel = row.pagato ? 'Pagata' : 'Da pagare';
+      const statoClass = row.pagato ? 'text-success' : 'text-danger';
+
+      tr.innerHTML = `
+        <td>${row.id_multa}</td>
+        <td>${row.data}</td>
+        <td>${row.targa}</td>
+        <td>€ ${Number(row.importo).toFixed(2)}</td>
+        <td class="${statoClass}">${statoLabel}</td>
+        <td>${row.motivo}</td>
+      `;
+      tbody.appendChild(tr);
+    });
+  })
+  .catch(err => console.error("Errore fetch /api/fines/list:", err));
+
+
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
